syntax = "proto3";
option go_package ="proto_build/";

//消息类型
enum MESSAGE_TYPE {
  TEXT = 0;  //文本消息。
  LOCATION = 1;  //地理位置消息。
  FACE = 2; // 表情消息。
  SOUND = 3;//  语音消息。
  IMAGE = 4;//  图像消息。
  FILE = 5;//  文件消息。
  Video = 6;//  视频消息。
}

//文本消息
message TextMessage{
  int32 id = 1;
  string content = 2;
}
//地理位置消息
message LocationMessage{
  int32 id = 1;
  string cover_image = 2;
  float lat = 3;
  float lng = 4;
  string map_link = 5;
  string desc = 6;
}
//表情消息
message FaceMessage{
  int32 id = 1;
  string symbol = 2;
}
//语音消息
message SoundMessage{
  int32 id = 1;
  string url = 2;
  int32 size = 3;
  int32 seconds = 4;
}

//图片类型
enum IMAGE_TYPE{
  ORIGIN = 0; //原图
  BIG = 1; //大图
  THUMBNAIL = 2;// 缩略图
}
//图片格式
enum IMAGE_FORMAT{
  JPG = 0;
  GIF = 1;
  PNG = 2;
  BMP = 3;
  OTHER = 255;
}
//图片
message ImageMessageItem{
  IMAGE_TYPE type = 1; // 类型
  IMAGE_FORMAT format = 2; //格式
  int32 size = 3; //大小
  int32 width = 4; //宽度
  int32 height = 5; //高度
  string url = 6; //链接地址
}

//图像消息
message ImageMessage{
  int32 id = 1;
  repeated ImageMessageItem list = 2;
}
//文件消息
message FileMessage{
  int32 id = 1;
  int32 size = 2; //大小
  string name = 3; //文件名
  string url = 4; //链接地址
}
//视频格式
enum VIDEO_FORMAT{
  MP4 = 0;
  MOV = 1;
  WMV = 2;
  FLV = 3;
  AVI = 4;
  MKV = 5;
  OTHER_VIDEO_FORMAT = 255;
}
//视频消息
message VideoMessage{
  int32 id = 1;
  int32 size = 2;
  int32 second = 3;
  string url = 4;
  string format = 5;
  string thumb_url = 6;
  string thumb_size = 7;
  string thumb_width = 8;
  string thumb_height = 9;
  IMAGE_FORMAT thumb_format = 10;
}
